--- a/DataValidationAPI/DataValidationAPI.Infrastructure/DataValidationAPI.Infrastructure.csproj
+++ b/DataValidationAPI/DataValidationAPI.Infrastructure/DataValidationAPI.Infrastructure.csproj
@@ -1,9 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DataValidationAPI.Domain\DataValidationAPI.Domain.csproj" />
+    <ProjectReference Include="..\DataValidationAPI.Persistence\DataValidationAPI.Persistence.csproj" />
+    <ProjectReference Include="..\DataValidationAPI.Service\DataValidationAPI.Service.csproj" />
+  </ItemGroup>
 
 </Project>
