--- a/DataValidationAPI/DataValidationAPI.Presentation/appsettings.json
+++ b/DataValidationAPI/DataValidationAPI.Presentation/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "my top secret key"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server = (localdb)\\mssqllocaldb; Database = DataValidation; Trusted_Connection = True"
   },
