--- a/DataValidationAPI/DataValidationAPI.Service/DataValidationAPI.Service.csproj
+++ b/DataValidationAPI/DataValidationAPI.Service/DataValidationAPI.Service.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="7.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DataValidationAPI.Domain\DataValidationAPI.Domain.csproj" />
     <ProjectReference Include="..\DataValidationAPI.Persistence\DataValidationAPI.Persistence.csproj" />
   </ItemGroup>
