--- a/DataValidationAPI/DataValidationAPI.Infrastructure/DataValidationAPI.Infrastructure.csproj
+++ b/DataValidationAPI/DataValidationAPI.Infrastructure/DataValidationAPI.Infrastructure.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DataValidationAPI.Domain\DataValidationAPI.Domain.csproj" />
     <ProjectReference Include="..\DataValidationAPI.Persistence\DataValidationAPI.Persistence.csproj" />
     <ProjectReference Include="..\DataValidationAPI.Service\DataValidationAPI.Service.csproj" />
